welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:1: error: identifier expected but integer literal found.
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {for (i<-1 to nums.length) {if ((nums[i-1])==lookingFor) {return i+1}}; return -1} 
                                                                                                 ^indexOfValue:1: error: ']' expected but '}' found.
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {for (i<-1 to nums.length) {if ((nums[i-1])==lookingFor) {return i+1}}; return -1} 
                                                                                                                              ^